--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="amount">Amount</string>
     <string name="income">Income</string>
     <string name="expense">Expense</string>
+    <string name="default_balance">Default Balance</string>
 
     <string-array name="category_items">
         <item>Bills</item>
